# zurds

./: Cargo.toml  run.sh  test
res/: index.html  index.js  match.js  styles.css  webrtc.js
src/: err.rs  id.rs  main.rs  messenger.rs  players.rs  playerstate.rs  request.rs  response.rs
zurds-be/: Cargo.toml
zurds-be/res/: 404.html  index.js  styles.css
zurds-be/src/: err.rs  main.rs  messenger.rs  playerstate.rs  request.rs  response.rs
zurds-fe/: Cargo.toml  copyfiles.py  example.spell  perf.data  perf.data.old
zurds-fe/res/: challenge.html  challenge.js  chess.html  game.laws  game.rune  game.sigil  index.html  utils.laws  utils.sigil
zurds-fe/res/rune/: lib.rune
zurds-fe/res/rune/pieces/: chariot.rune  king.rune  magician.rune  martyr.rune  mercenary.rune  vizir.rune
zurds-fe/src/: lib.rs
zurds-fe/src/lang/: characters.rs  err.rs  eval.rs  lexer.rs  mod.rs  parser.rs  typesystem.rs
zurds-fe/test-spells/: avg.spell  carcass.spell  damage-opponent-creatures.spell  damage-to-target.spell  example.spell  fn.spell  indexing.spell  interior-mutability.spell  jift.spell  looping-assignment.spell  map-filter.spell
