[package]
name = "zurds-be"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
incdir = "1.0.0"
phf = { version = "0.11.2", features = ["macros"] }
rand = "0.8.5"
serde = { version = "1.0.203", features = ["derive", "rc"] }
serde_json = "1.0.117"
tokio = { version = "1.37.0", features = ["macros", "rt-multi-thread", "net", "io-util", "time", "sync"] }
