[package]
authors = ["wizurd"]
edition = "2021"
name = "zurds-fe"
publish = false
version = "0.0.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.93"
web-sys = { version = "0.3.70", features = ["Document", "Element", "HtmlElement", "Node", "Window"]}
phf = { version = "0.11.2", features = ["macros"] }
escape8259 = "0.5.3"


