[package]
authors = ["wizurd"]
edition = "2021"
name = "zurds-fe"
publish = false
version = "0.0.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.93"
web-sys = { version = "0.3.70", features = ["Document", "Element", "HtmlElement", "Node", "Window", "console", "RtcPeerConnection", "RtcDataChannel"] }
phf = { version = "0.11.2", features = ["macros"] }
escape8259 = "0.5.3"
console_error_panic_hook = "0.1.7"
itertools = "0.13.0"
serde = "1.0.217"
serde_json = "1.0.134"
gloo-utils = { version = "0.2.0", features = ["serde"] }
