[package]
authors = ["wizurd"]
edition = "2021"
name = "zurds-fe"
publish = false
version = "0.0.0"


[dependencies]
wasm-bindgen = "0.2.100"
web-sys = { version = "0.3.70", features = ["Document", "Element", "HtmlElement", "Node", "Window", "console", "RtcPeerConnection", "RtcDataChannel", "Performance"] }
phf = { version = "0.11.2", features = ["macros"] }
escape8259 = "0.5.3"
console_error_panic_hook = "0.1.7"
itertools = "0.13.0"
serde = "1.0.217"
serde_json = "1.0.134"
gloo-utils = { version = "0.2.0", features = ["serde"] }
serde-wasm-bindgen = "0.6.5"
rune = "0.13.4"

[profile.release]
opt-level = 3       # Maximum speed optimization
lto = "fat"         # Ensures full link-time optimization
codegen-units = 1   # Allows the compiler to inline aggressively
panic = "abort"     # Removes panic-related code
